Scrollbar for windows fixed

--- a/project3/orders/static/style.css
+++ b/project3/orders/static/style.css
@@ -53,11 +53,11 @@ body{
   text-align: center;
   margin: 4px;
   background-color: black;
-  border-color: black;
   outline: none;
   align-items: center;
   color: inherit;
   border-color: inherit;
+  border-style: solid;
 }
 
 .settings2{
@@ -134,6 +134,7 @@ body{
 #mom{
   color: inherit;
   text-decoration: none;
+  border-color: inherit;
 }
 
 #order{
@@ -141,17 +142,16 @@ body{
   color: inherit;
 }
 
-<<<<<<< HEAD
 #yeet{
   height: auto;
   width: 57px;
   background-color: grey;
   outline-style: solid;
-=======
+}
+
 ::placeholder{
   color: inherit;
 }
->>>>>>> dcdeafd4d8a11b530695a48714b91a35859bc0b7
 
 .parrot{
   position: absolute;
@@ -159,4 +159,31 @@ body{
   height: 1000px;
   width: 1000px;
   left: 30%
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  color: inherit;
+  opacity: 0.9;
+  border-radius: 50px;
+}
+
+::-webkit-scrollbar-arrow {
+  color: black;
+  opacity: 0.9;
+}
+
+::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
 }
